[tool.poetry]
name = "text-generation-webui"
version = "0.1.0"
description = ""
authors = ["Yang, Bo <pop.atry@gmail.com>"]
readme = "README.md"
packages = [{include = "text_generation_webui"}]

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "0.18.0"
colorama = "^0.4.6"
datasets = "^2.11.0"
flexgen = "0.1.7"
gradio = "3.25.0"
markdown = "^3.4.3"
numpy = "^1.24.3"
pandas = "^2.0.0"
pillow = ">=9.5.0"
pyyaml = "^6.0"
requests = "^2.28.2"
rwkv = "0.7.3"
safetensors = "0.3.0"
sentencepiece = "^0.1.98"
tqdm = "^4.65.0"
peft = {git = "https://github.com/huggingface/peft"}
transformers = {git = "https://github.com/huggingface/transformers.git"}
windows = "^0.1.1"
bitsandbytes = {version = "0.38.1", markers = "platform_system != \"Windows\""}
llama-cpp-python = {version = "0.1.34", markers = "platform_system != \"Windows\""}
torchvision = {url = "https://download.pytorch.org/whl/nightly/cpu/torchvision-0.16.0.dev20230423-cp310-cp310-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-2.1.0.dev20230422-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
setuptools = "^67.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
